# connectome-adapters

./: .gitignore  README.md  pyproject.toml  requirements.txt
adapters/discord_adapter/: README.md
adapters/discord_webhook_adapter/: README.md  main.py
adapters/shell_adapter/: main.py
adapters/slack_adapter/: README.md  main.py
adapters/telegram_adapter/: README.md  main.py
adapters/text_file_adapter/: README.md  main.py
adapters/zulip_adapter/: README.md  main.py
cli/: __init__.py  adapters.toml  cli.py  config.py
cli/commands/: __init__.py  restart_cmd.py  start_cmd.py  status_cmd.py  stop_cmd.py
config/: discord_config.yaml.example  discord_webhook_config.yaml.example  shell_config.yaml.example  slack_config.yaml.example  telegram_config.yaml.example  text_file_config.yaml.example  zulip_config.yaml.example  zulip_emoji_mappings.csv
core/adapter/: base_adapter.py
core/cache/: attachment_cache.py  message_cache.py
core/conversation/: __init__.py  base_data_classes.py  base_manager.py  base_message_builder.py  base_reaction_handler.py  base_thread_handler.py
core/event_processors/: __init__.py  base_history_fetcher.py  base_incoming_event_processor.py  base_outgoing_event_processor.py  connection_events.py  incoming_event_builder.py  incoming_events.py  outgoing_event_builder.py  outgoing_events.py  request_event_builder.py  request_events.py
core/socket_io/: server.py
core/utils/: __init__.py  attachment_loading.py  emoji_converter.py
docs/: architecture_overview.md  code_structure.md
src/: __init__.py
src/adapters/: __init__.py
src/core/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
(+505 files in other folders)
